Fixed spacing on code blocks

--- a/assets/scss/_code.scss
+++ b/assets/scss/_code.scss
@@ -19,7 +19,7 @@
             padding-top: 0;
             padding-right: 0;
             padding-left: 0;
-            padding-bottom: 5;
+            padding-bottom: 0;
         }
     }
 
